# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  30 May 2006; Roy Marples <uberlord@gentoo.org>:

    Really fix is_xenU_sys, #134571 thanks to Stefan Hellermann.

  24 May 2006; Roy Marples <uberlord@gentoo.org>:

    Ensure that we call halt.sh in a new shell with LC_ALL=C so that we don't
    load any locale information which may stop us unmounting /usr, #128848
    and #133090.

    Don't set clock for OpenVZ systems, #133265 thanks to Kir Kolyshkin.

    Don't remount / in checkroot for unionfs /, #129975 thanks to Daniel.

    Don't stop net interfaces / is unionfs and a branch is network mounted.

* baselayout-1.12.0 (23 May 2006)

  23 May 2006; Roy Marples <uberlord@gentoo.org>:

    halt.sh can now deal with unionfs a bit better, #99682.

  16 May 2006; Roy Marples <uberlord@gentoo.org>:

    Always report Xen domU domains correctly, #107976.

  15 May 2006; Roy Marples <uberlord@gentoo.org>:

    Always test for space at the end of the bridge name.

  14 May 2006; Roy Marples <uberlord@gentoo.org>:

    Don't stop coldplugged services when changing runlevels, #113264.

    Only report inactive start once.

  07 May 2006; Roy Marples <uberlord@gentoo.org>:

    Fix logic in br2684ctl.sh as reported by Alin Nastac, #132549.

  05 May 2006; Mike Frysinger <vapier@gentoo.org>:

    Fix typo s/veend/vewend/ in functions.sh as reported by Yoshino #132262.

  05 May 2006; Roy Marples <uberlord@gentoo.org>:

    If a device initiated service is in the default runlevel then we no
    longer start it in the boot runlevel.

  04 May 2006; Roy Marples <uberlord@gentoo.org>:

    RC_COLDPLUG is now just a yes|no setting and the service list allowed
    is now in RC_PLUG_SERVICES.
    Added RC_HOTPLUG setting similar to RC_COLDPLUG.

* baselayout-1.12.0_pre19 (02 May 2006)

  01 May 2006; Roy Marples <uberlord@gentoo.org>:

    /proc/net/wireless may not have whitespace after $iface: